--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@adonisjs/events": "^9.0.2",
     "@adonisjs/http-server": "^7.2.3",
     "@adonisjs/logger": "^6.0.3",
+    "@cmmv/server": "^0.6.3",
     "@hapi/hapi": "^21.1.0",
     "@hono/node-server": "^1.3.0",
     "@koa/router": "^13.1.0",
