--- a/package.json
+++ b/package.json
@@ -34,49 +34,50 @@
   },
   "license": "MIT",
   "dependencies": {
+    "0http": "^3.5.3",
     "@adonisjs/application": "^8.3.1",
     "@adonisjs/encryption": "^6.0.2",
     "@adonisjs/events": "^9.0.2",
-    "@adonisjs/http-server": "^7.2.3",
-    "@adonisjs/logger": "^6.0.3",
-    "@cmmv/server": "^0.6.3",
-    "@hapi/hapi": "^21.1.0",
-    "@hono/node-server": "^1.3.0",
+    "@adonisjs/http-server": "^7.4.0",
+    "@adonisjs/logger": "^6.0.5",
+    "@cmmv/http-mini": "^0.0.6",
+    "@cmmv/server": "^0.8.7",
+    "@hapi/hapi": "^21.3.12",
+    "@hono/node-server": "^1.13.8",
     "@koa/router": "^13.1.0",
     "@leizm/web": "^2.7.3",
-    "@tinyhttp/app": "^2.2.1",
-    "@trpc/server": "^10.7.0",
-    "0http": "^3.4.2",
+    "@tinyhttp/app": "^2.5.0",
+    "@trpc/server": "^10.45.2",
     "autocannon": "^8.0.0",
     "autocannon-compare": "^0.4.0",
     "benchmark": "^2.1.4",
-    "chalk": "^5.2.0",
+    "chalk": "^5.4.1",
     "cli-table": "^0.3.11",
     "commander": "^12.1.0",
     "connect": "^3.7.0",
     "cors": "^2.8.5",
     "dns-prefetch-control": "^0.3.0",
-    "express": "^5.0.0",
-    "fastify": "^5.0.0",
+    "express": "^5.0.1",
+    "fastify": "^5.2.1",
     "frameguard": "^4.0.0",
-    "h3": "^1.10.0",
+    "h3": "^1.15.0",
     "hide-powered-by": "^1.1.0",
-    "hono": "^4.0.1",
+    "hono": "^4.7.1",
     "hsts": "^2.2.0",
     "ienoopen": "^1.1.1",
-    "inquirer": "^12.1.0",
-    "koa": "^2.14.1",
+    "inquirer": "^12.4.2",
+    "koa": "^2.15.4",
     "koa-isomorphic-router": "^1.0.1",
     "micro": "^10.0.1",
     "micro-route": "^2.5.0",
     "microrouter": "^3.1.3",
-    "ora": "^8.1.1",
+    "ora": "^8.2.0",
     "polka": "^0.5.2",
     "polkadot": "^1.0.0",
-    "rayo": "^1.4.5",
-    "restana": "^4.9.7",
-    "restify": "^11.0.0",
-    "router": "^1.3.7",
+    "rayo": "^1.4.6",
+    "restana": "^4.9.9",
+    "restify": "^11.1.0",
+    "router": "^1.3.8",
     "server-base": "^7.1.32",
     "server-base-router": "^7.1.32",
     "take-five": "^2.0.0",
@@ -84,6 +85,6 @@
   },
   "devDependencies": {
     "snazzy": "^9.0.0",
-    "standard": "^17.0.0"
+    "standard": "^17.1.2"
   }
 }
